SG.tf
resource "aws_security_group" "SG" {
  name        = "Custom SG"
  description = "Security Group created for Custom Rules"
  vpc_id      = "${aws_vpc.default.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "us-east-1_10.0.0.0-SG"
  }
}
